# wuwaid-quests

./: .gitignore  JOURNEY_LOG.json  README.md  TODO.md  package.json  pyproject.toml
app/: auth.py  conftest.py  db.py  export.py  import_translations.py  main.py  test_apply_edits.py  test_auth.py  test_build_index_categories.py  test_build_index_preserve.py  test_categories.py  test_drafts.py  test_editor_routes.py  test_edits_id.py  test_export_route.py  test_gzip.py  test_mcp_server_categories.py  test_memory_migration.py  test_search_id.py  test_translate_categories.py  test_translate_id.py  test_translate_id_glossary.py  test_viewer_id_merge.py
docs/superpowers/plans/: 2026-06-02-editor-local-search.md  2026-06-02-editor-mode.md  2026-06-02-editor-realtime-preview.md  2026-06-02-editor-treeview-dnd.md
docs/superpowers/specs/: 2026-06-02-editor-mode-design.md  2026-06-02-editor-treeview-dnd-design.md
scripts/: __init__.py  build_index.py  dev-check.js  export_id.py  import_official_translations.py  manual-editor-test.sh  mcp_server.py  run-dev.sh  serve-check.js  translate_id.py
scripts/__manual__/: test_mcp_server.py  translate-categories.md  translate-id.md
scripts/translate_id/: __init__.py  __main__.py  _cli.py  atomic.py  categories_orchestrator.py  client.py  glossary.py  memory.py  orchestrator.py  postprocess.py  progress.py  prompt.py  slot_detect.py  state_iter.py  usage.py
web/: index.html  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/__manual__/: editor-flow.md  quest-perf.md
web/src/lib/: api.ts  (+8 more)
(+31 files in other folders)
