[project]
name = "wuwaid-quests"
version = "0.1.0"
description = "Web viewer for exported Wuthering Waves quest dialogue"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
